<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginpp"
    android:orientation="vertical"
    android:background="@drawable/pictureppback">

  <ImageView
      android:layout_width="400sp"
      android:layout_height="300sp"
      android:layout_marginTop="215sp"
      android:layout_marginStart="10sp"
      android:src="@drawable/bgpp"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/welcome_to_uilover"
      android:textSize="30sp"
      android:layout_marginLeft="10sp"
      android:layout_marginTop="25sp"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/download_all_the_designs"
      android:layout_marginLeft="10sp"
      android:textSize="20sp"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10sp"
      android:textSize="20sp"
      android:text="@string/available_on_uilover" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10sp"
      android:textSize="20sp"
      android:text="@string/channal_for_free"
/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/get_started"
      android:layout_marginTop="20sp"
      android:layout_marginLeft="240sp"
      android:textSize="30sp"
      />
  </androidx.appcompat.widget.LinearLayoutCompat>